test/trivial/shannon/readWriteComplex.good
1.2 + 2.3i
1.2 + 2.3i
1.2 + 2.3i
1.2 + 2.3i
1.2 + 2.3i
readWriteComplex.chpl:6: error: Unhandled system error: bad format (1002)
